--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 Marcas
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="BMW.html">BMW</a>
+                <a class="dropdown-item" href="bmw.html">BMW</a>
                 <a class="dropdown-item" href="#">Mercedes</a>
                 <a class="dropdown-item" href="#">Audi</a>
               </div>
